--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-package-lock.json
-package-lock.json
-package-lock.json
-package-lock.json
+.DS_Store
+node_modules/
+pnpm-lock.yaml
+.vercel/
+*.log*
